--- a/Desafios/d012/estilo/style.css
+++ b/Desafios/d012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+:root{
+    --fonte1: verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion' One, cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -19,6 +30,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 4vw;
 }
 
 header > p{
@@ -40,6 +53,8 @@ section{
     padding-bottom: 10vh; 
     line-height: 2em; /* espaçamento entre as linhas*/
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 4vw;
 }
 
 section.imagem{
